[package]
name = "has_fields"
version = "0.1.1"
edition = "2021"
authors = ["lihe07"]
description = "Some macros helpful for processing forms with optional fields"
keywords = ["macro", "form", "optional", "field"]
license = "Unlicense"
repository = "https://github.com/lihe07/has_fields"

[dependencies]
macros = { path = "macros" }
